Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-106108

REG/macOS: context menu corners are not rounded

    XMLWordPrintable

Details

    • macOS
    • 6a839e0ae4 (qt/qtbase/dev) 6a839e0ae4 (qt/tqtc-qtbase/dev) 4ac04c1aa9 (qt/tqtc-qtbase/6.2) 0c5f294217 (qt/qtbase/6.4) 0c5f294217 (qt/tqtc-qtbase/6.4) 0c5f294217 (qt/tqtc-qtbase/6.4.1) 0c5f294217 (qt/tqtc-qtbase/tqtc/qtinsight-6.4)

    Description

      Context menu popup widgets corner is not rounded up. This looks rounded with Qt5.15.3.
      Attached is the screenshot and example.

      Attachments

        Activity

          People

            tpochep Timur Pocheptsov
            irfan.omair@digia.com Irfan Omair
            Votes:
            1 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: