qnswindow (-backgroundColor) - return 'clear color' for Qt::Popup

That's what we initially did for borderless windows and we need it in order
to draw rounded corners for context menus.

Fixes: QTBUG-106108
Change-Id: I6e4254b714ad7a094aa295546d5ac7fba5e21b13
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
(cherry picked from commit 6a839e0ae4cb1eddd290d64b152a2571f3586ed2)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>